--- a/Warm-up-mosquitoes-RyanColqui.Rmd
+++ b/Warm-up-mosquitoes-RyanColqui.Rmd
@@ -11,16 +11,13 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 # ABSTRACT
-
-Fill in abstract at the end after we have finished the methods, results, discussion, conclusions and know what our data "says".
+In this study, we explored which bird species mosquitoes most commonly feed on and how that relates to West Nile Virus (WNV) activity in Salt Lake City, Utah. Using DNA extraction, PCR, and sequencing, we identified bird species from mosquito blood meals and compared sites with and without WNV positive mosquito pools. Our bar plots showed that the House Finch, House Sparrow, and American Robin were the most common hosts, with the House Finch standing out in WNV positive areas. Statistical analyses showed a strong positive relationship between the number of House Finch blood meals and WNV presence and positive rate. These results support our hypothesis that the common House Finch acts as an amplifying host for WNV in this region.
 
 # BACKGROUND
+West Nile Virus (WNV) is a disease spread mainly by mosquitoes that pick up the virus from infected birds and pass it on to other animals, including humans. Birds are really important in this cycle because they serve as the main hosts that help the virus multiply. When a mosquito bites an infected bird, it can carry the virus and spread it to new locations. Figuring out which birds mosquitoes feed on the most can help us understand which species might be acting as amplifying hosts, meaning they play a big role in spreading WNV in an area.
+To find out what birds mosquitoes feed on. We looked at the DNA inside their blood meals. Scientists extract the blood from the mosquito’s stomach, then use PCR (polymerase chain reaction) to copy and amplify that DNA. After that, the DNA is sequenced and compared to known bird species so we can identify the host. In this experiment, we used this method to compare mosquito blood meals from sites with and without WNV positive mosquito pools. This helped us test our hypothesis that the common House Finch acts as an amplifying host for WNV in Salt Lake City, Utah.
 
-Fill in some text here that provides background info on the WNV system, the blood meal DNA extractions, PCR, sequencing, etc. and the foundation for our question/hypothesis.
-
-We can use the viremia duration (Kumar et al., 2003) bar plot (make sure to reference sources!!!)  to illustrate the potential importance of house finches in WNV transmission and as the logical foundation for our hypothesis that house finches serve as amplifying hosts for WNV and the prediction that locations with more house finches in our blood host analysis are also the same locations with higher positive tests for WNV in mosquito pools 
-
-NOTE: Examples of data you can plot for the background info at https://github.com/saarman/BIOL3070/
+## Detectable Viremia in Bird Species
 
 ```{r viremia, include=TRUE, eval=TRUE, warning=FALSE, fig.align='left', fig.width=4.75, fig.height=7}
 # Manually transcribe duration (mean, lo, hi) from the last table column
@@ -60,7 +57,7 @@ arrows(duration$lo, bp, duration$hi, bp,
 
 # STUDY QUESTION and HYPOTHESIS
 
-## Questions  
+## Question 
 What species of bird acts as the WNV amplifying host in Salt Lake City, Utah?
 
 ## Hypothesis 
@@ -69,7 +66,7 @@ The common House Finch acts as the amplifying host of WNV in Salt Lake City, Uta
 ## Prediction
 If the House finch is the amplifying host for WNV, we can predict that the trapping locations which is where mosquitoes feed on the house finches will have higher rates of WNV.
 
-# MOTHODS
+# METHODS
 
 First, We gathered mosquitos from Salt Lake City, Utah and the area surrounding it. 
 Second, We then placed our mosquitos into a small tube so we are able to extract the blood's DNA from Mosquito last meal.
@@ -171,9 +168,9 @@ par(op)
 host_species_colors <- species_colors
 ```
 
-## Fill in first analysis
-```{r first-analysis, include=TRUE, eval=TRUE, warning=FALSE, fig.align='left', fig.width=4.75, fig.height=7}
-# put code for analysis here```{r first-analysis, warning=FALSE}
+## First Analysis
+For the first analysis, we compared the number of mosquito blood meals from each host species between locations that had no WNV positive pools and locations that had one or more WNV positive pools. This helped us see which bird species mosquitoes were feeding on the most in each type of site. We used bar plots because they make it easy to visually compare the feeding patterns across species and between WNV positive and WNV negative areas. This helps us see certain host species that the mosquitos favor.
+```{r first-analysis, warning=FALSE}
 ## import counts_matrix: data.frame with column 'loc_positives' (0/1) and host columns 'host_*'
 counts_matrix <- read.csv("./bloodmeal_plusWNV_for_BIOL3070.csv")
 
@@ -236,8 +233,8 @@ op <- par(mfrow = c(1, 2),
           xaxs = "i")           # a bit tighter axis padding
 
 ## Panel A: No WNV detected (loc_positives = 0)
-barplot(height = counts0, width = 10)
-        names.arg = species_labels,
+barplot(height = counts0,
+        names.arg = species_labels, 
         cex.names = .5,
         cex.axis = .5,
         col = rev(unname(species_colors[species_labels])),
@@ -265,18 +262,32 @@ par(op)
 host_species_colors <- species_colors
 ```
 
-## Fill in second analysis/plot
-```{r second-analysis-or-plot, include=TRUE, eval=TRUE, warning=FALSE, fig.align='left', fig.width=4.75, fig.height=7}
-# put code for plotting here
+## Second Analysis
+For the second analysis, we ran a generalized linear model to see if the number of House Finch blood meals at each site was related to WNV activity. We made two versions of the model one that tested whether the number of House Finch meals predicted if a site had any WNV positive mosquito pools, and another that tested if it predicted how high the WNV positivity rate was.
+```{r}
+# second-analysis-or-plot, glm with house finch alone against binary +/_
+glm1 <- glm(loc_positives ~ host_House_finch,
+            data = counts_matrix,
+            family = binomial)
+summary(glm1)
+
+#glm with house-finch alone against positivity rate
+glm2 <- glm(loc_rate ~ host_House_finch,
+            data = counts_matrix)
+summary(glm2)
 ```
 
 # DISCUSSION
+After creating the bar plots and analyzing our data, we observed that the House Finch and House Sparrow were the most common hosts in mosquito blood meals. The second set of bar plots, which compared sites with and without WNV positive mosquito pools, showed that locations with more House Finch blood meals tended to have higher WNV positivity. To confirm this pattern, we ran a statistical analysis that revealed a significant positive correlation between the number of House Finch blood meals and the WNV positivity rate. Together, these results support our hypothesis that the House Finch acts as an amplifying host for WNV, since areas where mosquitoes feed more frequently on this species also have a higher occurrence of the virus
 
-## Interpretation - fill in analysis
+## Interpretation: First Analysis
+When we compared the number of mosquito blood meals from each host species between locations that had no WNV positive pools and locations that had one or more WNV positive pools we noticed that there were a couple of species that stood out such as the House Finch, House Sparrow and the American Robin. With this visualization we can see that the House Finch has a significant role for being a blood meal for the mosquitoes. 
 
-## Interpretation - fill in analysis/plot
+## Interpretation: Second Analysis
+The results showed a significant positive relationship in both cases. Sites with more House Finch blood meals were more likely to have mosquitoes that tested positive for WNV, and their positivity rates were also higher. Overall, this supports our earlier graphs and the idea that House Finches may be acting as important amplifying hosts for West Nile Virus in our study area.
 
 # CONCLUSION
+From our results, it looks like the House Finch plays an important role in spreading West Nile Virus around Salt Lake City. Both the graphs and our data analysis showed that places with more House Finch blood meals also had higher numbers of mosquitoes that tested positive for WNV. Along with the House Sparrow and American Robin. The House Finch stood out as a common host, but it had the strongest connection to WNV. Our findings support our hypothesis that the common House Finch acts as an amplifying host for West Nile Virus in this area.
 
 # REFERENCES     
 
